tera/src/snapshot_tests/snapshots/tera__tests__parser__parser_errors@unclosed_tag.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/unclosed_tag.txt
---
 Syntax error --> [unclosed_tag.txt:1:27]
  |
1 | {% if i + 2 | integer > x %
  |                            ^---
  = Unexpected end of input
